# verbatim

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  docker-compose.yaml  manifest.json  pyproject.toml
.claude/: settings.json
migrations/: 0001_create_chunks_table.sql  0002_observability_and_performance.sql  0003_add_fts_support.sql  0004_add_search_distribution_telemetry.sql  0005_reranker_comparison_tracking.sql  0006_fix_chunk_id_type.sql  0007_reranker_displacement_score.sql
prompts/: extraction.txt  reranking.txt  synthesis.txt
scripts/: chat.py  check_db.py  download_data.py  ingest_all.py  ingest_data.py  init_db.py  migrate.py  stats.py  test_parser.py  test_retrieval.py
verbatim/: db.py  processor.py  reranker.py  synthesizer.py
