[project]
name = "verbatim"
version = "0.1.0"
description = "A project for understanding and discussing the financial reports"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "httpx>=0.28.1",
    "langchain-text-splitters>=1.1.2",
    "pdfplumber>=0.11.9",
    "pgvector>=0.4.2",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "typer>=0.25.1",
]
