[project]
name = "verbatim"
version = "0.1.0"
description = "A project for understanding and discussing the financial reports"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=4.0.0",
    "httpx>=0.28.1",
    "langchain>=1.2.17",
    "langchain-openai>=1.2.1",
    "langchain-text-splitters>=1.1.2",
    "openai>=2.36.0",
    "pdfplumber>=0.11.9",
    "pgvector>=0.4.2",
    "psycopg>=3.3.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "typer>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
]


[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
show_error_codes = true
strict = true

[[tool.mypy.overrides]]
module = "pgvector.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
